Wed Mar 11 11:37:00 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoint numbers.

Fri Mar 06 05:48:28 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/build_xapian.sh,libs/get_xapian.py: Update with new
	  tarballs, and add script to build and install (locally) all the
	  tarballs.

Thu Mar 05 16:20:01 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/distance.py: Fix completely broken distance test.

Thu Mar 05 16:10:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/doctests/searchconnection_doctest2.txt,
	  xappy/unittests/general1.py: Update for new tarballs, and move
	  some tests from doctest to unittest so they can be handled more
	  neatly.

Thu Mar 05 16:09:44 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Update for new xappy tarballs.

Thu Mar 05 10:43:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: More updates to base revisions.

Thu Mar 05 10:26:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Fix base revision for postingsources.

Thu Mar 05 08:29:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Add postingsources branch.

Wed Mar 04 16:35:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/imgseek.py: Add buckets parameter, and some
	  useful commented out debug prints.

Wed Mar 04 16:34:22 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: add "buckets" parameter to IMGSEEK action,
	  to allow the number of buckets to be controlled.

Wed Mar 04 14:59:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/imgseek.py: Add (commented out) debugging prints.

Tue Mar 03 17:10:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,