@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-12109.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-12168.tgz',
      'xapian-core.tgz',
-     '8ccfd92c2312c0c7d288fae4189632ccad0d48cf',
+     '967bcbbf13d63eb6e80c51259d179328422965b9',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-12109.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-12168.tgz',
      'xapian-bindings.tgz',
-     '68b00fe90c77053d22ad1ee4241b4c8808fc5472',
+     '51ffa2f3ca652c5def202df90d5342694c1f0c7e',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-12109.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-12168.tgz',
      'win32msvc.tgz',
-     '0c78a92f01b03d209d1ea79862b19e5450ba64e7',
+     'eb29d7e085eae8e58aed107d5acfbb4308477d83',
      'xapian-core/win32',
     ),
     ('Xapian extras',
