@@ -1,3 +1,8 @@
+Wed Mar 11 13:52:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Update with new packages (core and bindings,
+	  old extras packages should be compatible).
+
 Wed Mar 11 11:37:00 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/make_xappy_tarballs: Update branchpoint numbers.
